# spoolman-cli

./: Cargo.toml  README.md
src/: config.rs  helpers.rs  main.rs  utils.rs
src/monitor/: daemon.rs
src/spoolman/: api.rs  config.rs  filament.rs  mod.rs  spool.rs  utils.rs  vendor.rs
