[package]
name = "spool"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.20"
clap_complete = "4.5.33"
colored = "2.1.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
xdg = { version = "2.5.2", features = ["serde"] }
daemonize = "0.5.0"
rumqttc = "0.24.0"
futures = "0.3.31"
